# libhal-exceptions

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py  disasm.txt  except_0percent_depth70.cpp.linker_section.ld  except_0percent_depth70.cpp.nearpoint.cpp  functions.txt  logs.txt  notes.md  symbol_dump.demangled.txt  symbol_dump.txt
.github/workflows/: 0.0.1.yml  0.0.2.yml  1.0.0.yml  ci.yml  demo_check.yml  deploy.yml  semantic-release.yml
benchmark/: CMakeLists.txt  README.md  all_tests.csv  all_tests.list  comparison-step2  comparison.r  conanfile.py  estell_except.csv  except0_depth70.nm  except0_depth70.nm.error.csv  except0_depth70.nm.error_small.csv  except0_depth70.nm.np.cpp  except_0percent_depth70.cpp.elf.ld  except_tests.csv  except_tests.list  extras.cpp  fast_gcc_unwind.cpp  filler.cpp  gen_depth_tests.py  generate.py  halbord_benchmark.py  main.cpp  nearpoint.cpp  numbers.txt  order.ld  platform.hpp  result64_except.csv  result_tests.list  stm32f103.ld  table_graph.csv  test_order.csv  test_order_lpc4078.csv
benchmark/generated_tests/: estell_except.cpp.csv  except.cpp  except.cpp.csv  except_04_error_000_cleanup.cpp  except_04_error_025_cleanup.cpp  except_04_error_050_cleanup.cpp  except_04_error_075_cleanup.cpp  except_04_error_100_cleanup.cpp  except_0percent_depth10.cpp  except_0percent_depth30.cpp  except_0percent_depth50.cpp  except_0percent_depth70.cpp  except_100percent_depth10.cpp  except_100percent_depth30.cpp  except_100percent_depth50.cpp  except_100percent_depth70.cpp  except_25percent_depth10.cpp  except_25percent_depth30.cpp  except_25percent_depth50.cpp  except_25percent_depth70.cpp  except_32_error_000_cleanup.cpp  except_32_error_025_cleanup.cpp  except_32_error_050_cleanup.cpp  except_32_error_075_cleanup.cpp  except_32_error_100_cleanup.cpp  except_4_32.cpp  except_50percent_depth10.cpp  except_50percent_depth30.cpp  except_50percent_depth50.cpp  except_50percent_depth70.cpp  except_64_96.cpp  except_64_error_000_cleanup.cpp  except_64_error_025_cleanup.cpp  except_64_error_050_cleanup.cpp  except_64_error_075_cleanup.cpp  except_64_error_100_cleanup.cpp  except_75percent_depth10.cpp  except_75percent_depth30.cpp  except_75percent_depth50.cpp  except_75percent_depth70.cpp  (+52 more)
benchmark/nearpoint_src/: nearpoint.cpp  order.ld
benchmark/written_tests/: result_2_strings.cpp.csv  result_string.cpp
datasheets/: README.md
datasheets/near_point/: block_seperation.json  linear_near_point_entry.json
demos/: CMakeLists.txt  baremetal.profile  conanfile.py  edx_extract.py  functions-lpc4078.csv  functions.csv  linker-lpc4078.ld  linker-stm32f103.ld  linker.ld  main.cpp  multi_levels.elf.func  multi_levels.elf.nm  multi_levels.elf.nm.error.csv  multi_levels.elf.nm.error_small.csv  multi_levels.elf.nm.np.cpp  multi_levels.elf.part.ld  multi_levels.funclist  order_functions.py  order_functions2.py  resource_list.hpp  single_level.elf.func  single_level.elf.nm  single_level.elf.nm.error.csv  single_level.elf.nm.np.cpp  single_level.elf.part.ld  single_level.funclist  sorted_list.ld  sorted_list_lpc4078.ld  summary-lpc4078.txt  summary.txt
demos/applications/: multi_levels.cpp  multiple_inheritance.cpp  multiple_virtual_inheritance.cpp  results.cpp  single_level.cpp
include/libhal-exceptions/: control.hpp  extra.hpp  module.cppm
linker_scripts/: arm-none-eabi-gcc-14.2_discard.ld
linker_scripts/arm-none-eabi-gcc-14.2/: discard_unwind_c.ld  override_gxx_personality_v0.ld
nearpoint/: .clangd  CMakeLists.txt  conanfile.py  main.cpp  main.cpp.old  main.vibe.cpp  nearpoint.cpp  plugin-api.h
scripts/: README.md  firefox.txt  firefox_reduced.csv  firefox_reduced.txt  multi.csv  multi.txt  multi_stm32f1.csv  nearpoint-v3.py  nearpoint.py  parse_exidx.py  prel31.py
scripts/archived/: gen_sorted_linkscript.py  nearpoint-v2.py
src/: control.cpp  exception.cpp  internal.hpp  wrappers.cpp
src/arm_cortex/estell/: exception.cpp  internal.hpp  libunwind_wrappers.cpp  wrappers.cpp
src/builtin/gcc/: impl.cpp
src/builtin/llvm/: override.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: control.test.cpp  main.test.cpp
v1/: CMakeLists.txt
v1/benchmark/: conanfile.py  filler.cpp  halbord_benchmark.py  order.ld  platform.hpp  table_graph.csv  test_nearpoint.csv
v1/benchmark/generated_tests/: except.cpp  nearpoint.cpp.csv  result_error04.cpp.csv  result_error16.cpp.csv  result_error65.cpp
v1/benchmark/nearpoint_src/: order.ld
v1/benchmark/no_lto/: lpc4078  stm32f103c8
v1/benchmark/written_tests/: result_2_strings.cpp  result_string.cpp.csv
v1/demos/: main.cpp
v1/demos/applications/: single_level.cpp
v1/src/arm_cortex/estell/: exception.cpp
v1/src/builtin/gcc/: impl.cpp
v1/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v2/demos/: CMakeLists.txt  resource_list.hpp
v2/include/libhal-exceptions/: new.hpp
v2/src/arm_cortex/estell/: exception.cpp  internal.hpp  libunwind_wrappers.cpp
v2/src/builtin/gcc/: override.cpp
v2/test_package/: conanfile.py  main.cpp
v2/tests/: control.test.cpp  main.test.cpp
